--- a/src/pages/Languages.html
+++ b/src/pages/Languages.html
@@ -58,6 +58,7 @@
           </a>
           <a
             href="#"
+            id="logoutBtn"
             class="flex items-center gap-3 px-4 py-2 rounded-lg text-red-600 hover:bg-red-100"
           >
             <i data-lucide="log-out"></i> <span>Logout</span>
@@ -392,5 +393,6 @@
       setupTableSort();
       loadLanguages();
     </script>
+    <script src="../js/auth-logout.js" defer></script>
   </body>
 </html>
