--- a/src/pages/activities.html
+++ b/src/pages/activities.html
@@ -59,6 +59,7 @@
           </a>
           <a
             href="#"
+            id="logoutBtn"
             class="flex items-center gap-3 px-4 py-2 rounded-lg text-red-600 hover:bg-red-100"
           >
             <i data-lucide="log-out"></i> <span>Logout</span>
@@ -749,5 +750,6 @@
       setupTableSort();
       fetchLanguages();
     </script>
+    <script src="../js/auth-logout.js" defer></script>
   </body>
 </html>
