--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -63,6 +63,7 @@
           </a>
           <a
             href="#"
+            id="logoutBtn"
             class="flex items-center gap-3 px-4 py-2 rounded-lg text-red-600 hover:bg-red-100"
           >
             <i data-lucide="log-out"></i> <span>Logout</span>
@@ -2517,5 +2518,6 @@
       // Expose for inline handlers (edit)
       window.openEditTripModal = openEditTripModal;
     </script>
+    <script src="../js/auth-logout.js" defer></script>
   </body>
 </html>
