--- a/src/pages/booking.html
+++ b/src/pages/booking.html
@@ -1369,6 +1369,6 @@
         setupHeaderSort();
       });
     </script>
-    <script src="../js/auth-logout.js" defer></script>
+    <script src="../js/logout.js" defer></script>
   </body>
 </html>
