--- a/src/pages/categories.html
+++ b/src/pages/categories.html
@@ -750,6 +750,6 @@
       // Initial load
       fetchLanguages();
     </script>
-    <script src="../js/auth-logout.js" defer></script>
+    <script src="../js/logout.js" defer></script>
   </body>
 </html>
