--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -2518,6 +2518,6 @@
       // Expose for inline handlers (edit)
       window.openEditTripModal = openEditTripModal;
     </script>
-    <script src="../js/auth-logout.js" defer></script>
+    <script src="../js/logout.js" defer></script>
   </body>
 </html>
