--- a/src/pages/Languages.html
+++ b/src/pages/Languages.html
@@ -393,6 +393,6 @@
       setupTableSort();
       loadLanguages();
     </script>
-    <script src="../js/auth-logout.js" defer></script>
+    <script src="../js/logout.js" defer></script>
   </body>
 </html>
