--- a/src/pages/includes.html
+++ b/src/pages/includes.html
@@ -743,6 +743,6 @@
       setupTableSort();
       fetchLanguages();
     </script>
-    <script src="../js/auth-logout.js" defer></script>
+    <script src="../js/logout.js" defer></script>
   </body>
 </html>
