--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -674,6 +674,8 @@
       </div>
     </div>
 
+    <script src="../js/ui.js" defer></script>
+
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         if (window.lucide?.createIcons) lucide.createIcons();
@@ -942,6 +944,8 @@
 
           if (!res.ok || !result?.succeeded) {
             console.error("GetReviews failed", res.status, text || result);
+            tgToast({ variant: "error", message: "Failed to load reviews." });
+
             list.innerHTML = `
               <div class="rounded-xl border border-rose-200 bg-rose-50 text-rose-700 p-4 flex items-center gap-2">
                 <i data-lucide="alert-triangle" class="h-4 w-4"></i>
@@ -967,11 +971,19 @@
 
       async function handleDeleteReview(reviewId) {
         if (!reviewId) {
-          alert("Cannot delete: review ID not provided by the API.");
+          tgToast({
+            variant: "warning",
+            message: "Cannot delete: review ID not provided by the API.",
+          });
           return;
         }
-        if (!confirm("Delete this review? This action cannot be undone."))
-          return;
+        const ok = await tgConfirm({
+          title: "Delete review?",
+          body: "This action cannot be undone.",
+          confirmText: "Delete review",
+          danger: true,
+        });
+        if (!ok) return;
 
         //   // ⚠️ TODO: Replace with your real endpoint/method when you share it
         //   alert(
@@ -1012,18 +1024,17 @@
           currentMainImageId !== null &&
           selectedImageIds.has(currentMainImageId);
 
-        const warning = includesMain
-          ? "\n\n⚠️ You are deleting the CURRENT MAIN image.\nNo main image will remain unless you set another one later."
-          : "";
+        const ok = await tgConfirm({
+          title: `Delete ${count} image${count === 1 ? "" : "s"}?`,
+          body: includesMain
+            ? "⚠️ You are deleting the CURRENT MAIN image.\nNo main image will remain unless you set another one later."
+            : "This cannot be undone.",
+          confirmText: "Delete",
+          cancelText: "Cancel",
+          danger: true,
+        });
+        if (!ok) return;
 
-        const confirmed = confirm(
-          `Delete ${count} selected image${
-            count === 1 ? "" : "s"
-          }? This cannot be undone.${warning}`
-        );
-        if (!confirmed) return;
-
-        // Build multipart form-data with repeated "imageIds" fields
         const formData = new FormData();
         [...selectedImageIds].forEach((id) =>
           formData.append("imageIds", String(id))
@@ -1055,17 +1066,25 @@
               res.status,
               text || result
             );
-            alert(`Failed to delete images. ${result?.message || ""}`.trim());
+            tgToast({
+              variant: "error",
+              message: `Failed to delete images. ${
+                result?.message || ""
+              }`.trim(),
+            });
             return;
           }
 
-          alert("Selected images deleted.");
+          tgToast({ variant: "success", message: "Selected images deleted." });
           selectedImageIds.clear();
           updateDeleteButtonState();
-          await fetchAndRenderTripMedia(currentTripId); // refresh grid & main badge
+          await fetchAndRenderTripMedia(currentTripId);
         } catch (err) {
           console.error("Delete images error:", err);
-          alert("Network error while deleting images.");
+          tgToast({
+            variant: "error",
+            message: "Network error while deleting images.",
+          });
         }
       }
 
@@ -1852,11 +1871,11 @@
             openModal();
             if (window.lucide?.createIcons) lucide.createIcons();
           } else {
-            alert("Failed to load trip data.");
+            tgToast({ variant: "error", message: "Failed to load trip data." });
           }
         } catch (err) {
           console.error(err);
-          alert("Error fetching trip data.");
+          tgToast({ variant: "error", message: "Error fetching trip data." });
         }
       }
 
@@ -1986,15 +2005,26 @@
             const result = await res.json();
             if (res.ok && result.succeeded) {
               currentTripId = result.data; // returned new trip ID
-              alert("Trip added successfully");
+              tgToast({
+                variant: "success",
+                message: "Trip added successfully.",
+              });
               showImagesTab(); // switch to images
               fetchTrips();
             } else {
-              alert("Failed to add trip: " + (result.errors || result.message));
+              tgToast({
+                variant: "error",
+                message:
+                  "Failed to add trip: " +
+                  (result.errors || result.message || "Unknown error"),
+              });
             }
           } catch (err) {
             console.error("Error:", err);
-            alert("Something went wrong.");
+            tgToast({
+              variant: "error",
+              message: "Something went wrong while adding the trip.",
+            });
           }
         } else {
           // edit mode -> UpdateTrip expects different payload
@@ -2028,33 +2058,51 @@
             }
             if (!res.ok) {
               console.error("Update failed", res.status, text || result);
-              alert(
-                `Failed to update trip (${res.status}). ${
+              tgToast({
+                variant: "error",
+                message: `Failed to update trip (${res.status}). ${
                   text || result?.message || "Check required fields."
-                }`
-              );
+                }`,
+              });
+
               return;
             }
             if (result?.succeeded) {
-              alert("Trip updated successfully");
+              tgToast({
+                variant: "success",
+                message: "Trip updated successfully.",
+              });
               closeModal();
               fetchTrips();
             } else {
-              alert(
-                "Failed to update trip: " + (result?.message || "Unknown error")
-              );
+              tgToast({
+                variant: "error",
+                message:
+                  "Failed to update trip: " +
+                  (result?.message || "Unknown error"),
+              });
             }
           } catch (err) {
             console.error("Update error:", err);
-            alert("An error occurred while updating the trip.");
+            tgToast({
+              variant: "error",
+              message: "An error occurred while updating the trip.",
+            });
           }
         }
       }
 
       // === Delete ===
       async function handleDeleteTrip(tripId) {
-        const confirmed = confirm("Are you sure you want to delete this trip?");
-        if (!confirmed) return;
+        const ok = await tgConfirm({
+          title: "Delete this trip?",
+          body: "This action cannot be undone.",
+          confirmText: "Delete trip",
+          cancelText: "Cancel",
+          danger: true,
+        });
+        if (!ok) return;
+
         const token = localStorage.getItem("accessToken");
         try {
           const res = await fetch(`/api/Trip/DeleteTrip/${tripId}`, {
@@ -2063,17 +2111,22 @@
           });
           const result = await res.json();
           if (res.ok && result.succeeded) {
-            alert("Trip deleted successfully.");
+            tgToast({ variant: "success", message: "Trip deleted." });
             fetchTrips();
           } else {
-            alert(
-              "Failed to delete trip: " +
-                (result.message || result.errors || "Unknown error")
-            );
+            tgToast({
+              variant: "error",
+              message:
+                "Failed to delete trip: " +
+                (result.message || result.errors || "Unknown error"),
+            });
           }
         } catch (err) {
           console.error("Delete error:", err);
-          alert("Something went wrong while deleting the trip.");
+          tgToast({
+            variant: "error",
+            message: "Network error while deleting the trip.",
+          });
         }
       }
 
@@ -2083,16 +2136,22 @@
         .addEventListener("submit", async (e) => {
           e.preventDefault();
           if (!currentTripId) {
-            alert(
-              "No trip selected. Please create a trip first or open an existing one."
-            );
+            tgToast({
+              variant: "warning",
+              message:
+                "No trip selected. Create a trip first or open an existing one.",
+            });
+
             return;
           }
 
           const fileInput = document.getElementById("tripImages");
           const files = Array.from(fileInput.files);
           if (!files.length) {
-            alert("Please select at least one image.");
+            tgToast({
+              variant: "info",
+              message: "Please select at least one image.",
+            });
             return;
           }
 
@@ -2125,7 +2184,10 @@
             }
 
             if (res.ok && result?.succeeded) {
-              alert("Images uploaded successfully.");
+              tgToast({
+                variant: "success",
+                message: "Images uploaded successfully.",
+              });
 
               // Reset local UI
               fileInput.value = "";
@@ -2140,14 +2202,19 @@
               updateDeleteButtonState();
             } else {
               console.error("Upload failed", res.status, text || result);
-              alert(
-                "Upload failed: " +
-                  (result?.message || text || "Unknown error.")
-              );
+              tgToast({
+                variant: "error",
+                message:
+                  "Upload failed: " +
+                  (result?.message || text || "Unknown error."),
+              });
             }
           } catch (err) {
             console.error("Upload error:", err);
-            alert("An error occurred while uploading images.");
+            tgToast({
+              variant: "error",
+              message: "An error occurred while uploading images.",
+            });
           }
         });
 
